refactor newsletter styles for improved responsiveness and design consistency

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,7 @@
     body {
       font-family: var(--font-sans);
       text-rendering: optimizeLegibility;
-      background-color: var(--c-blue-700);
+      background: var(--c-white);
     }
   }
 
@@ -134,7 +134,6 @@
   .newsletter {
     justify-self: center;
     background-color: var(--c-white);
-    max-width: calc(375 / 16 * 1rem);
   }
 
   .newsletter__header {
@@ -222,12 +221,24 @@
 
   /* ============== RESPONSIVE BREAKPOINTS ============== */
   @layer responsive {
+    /* Mobile breakpoint: up to 767px */
+    @media (max-width: 47.9375rem) {
+      .newsletter {
+        max-height: 100%;
+        min-width: 100%;
+      }
+    }
+
     /* Tablet breakpoint: 768px - 1023px */
     @media (min-width: 48rem) and (max-width: 63.9375rem) {
+      body {
+        background: var(--c-blue-700);
+      }
+
       .newsletter {
         min-width: calc(608 / 16 * 1rem);
         margin-top: 4.5rem;
-        padding: 1rem;
+        padding: 2rem;
         border-radius: 2rem;
         background: var(--c-white);
         box-shadow: var(--shadow-1);
@@ -235,7 +246,7 @@
 
       .newsletter__media {
         background-image: url("/assets/images/illustration-sign-up-tablet.svg");
-        border-radius: 2rem;
+        border-radius: 1rem;
         overflow: hidden;
       }
     }
@@ -243,11 +254,16 @@
 
   /* Desktop breakpoint: 1024px+ */
   @media (min-width: 64rem) {
+    body {
+      background: var(--c-blue-700);
+    }
+
     .newsletter {
       margin-top: 8rem;
       padding: 1rem;
       border-radius: 2rem;
       display: grid;
+      gap: calc(64 / 16 * 1);
       grid-template-columns: 1fr 1fr;
       min-width: calc(904 / 16 * 1rem);
       align-items: stretch;
@@ -262,7 +278,7 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      border-radius: 2rem;
+      border-radius: 1rem;
       overflow: hidden;
     }
 
